revise access control, check in, check out

--- a/App/src/assets/i18n/vi.json
+++ b/App/src/assets/i18n/vi.json
@@ -291,11 +291,11 @@
     "Addition2": "Giao thêm",
     "Created Time": "Ngày tạo",
     "Create Report Time": "Tạo thời gian báo cáo",
-    "Check In": "Kiểm soát khi vào xét nghiệm",
-    "Check Out": "Kiểm soát khi xét nghiệm xong",
+    "Check In": "Đăng ký xét nghiệm",
+    "Check Out": "Kết quả xét nghiệm",
     "Result": "Kết quả",
     "Rapid Test Kind": "Loại xét nghiệm",
-    "Access Control": "Kiểm soát khi vào cổng",
+    "Access Control": "Kiểm soát vào cổng",
     "Rapid Test": "Chẩn đoán nhanh",
     "Negative": "Âm tính",
     "Positive": "Dương tính"
